# dbt_dashboard_aovivo

./: README.md  pyproject.toml
dbt_aovivo/: dbt_project.yml
dbt_aovivo/models/: sources.yml
dbt_aovivo/models/bronze/jornada/: bronze_fatura_jornada.sql  bronze_fatura_jornada_small.sql
dbt_aovivo/models/bronze/redrex/: bronze_fatura_redrex.sql  bronze_fatura_redrex_small.sql
dbt_aovivo/models/gold/: gold_fatura.sql
dbt_aovivo/models/silver/jornada/: silver_fatura_jornada.sql
dbt_aovivo/models/silver/redrex/: silver_fatura_redrex.sql
dbt_dashboard_aovivo/: app.py
